--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background: Linen;
+  background: rgb(252, 247, 244);
   margin-top: 50px;
   margin-left: 100px;
   }
@@ -7,11 +7,11 @@ body {
 h1 {
   font-family: Verdana, Geneva, sans-serif;
   font-size: 2.5em;
-  color: FireBrick;
+  color: rgb(235, 122, 70);
   }
  
 p {
   font-family: Georgia, serif;
   font-size: 1.2em;
-  color: DarkSlateGray;
+  color: rgb(42, 78, 83);
   }
