--- a/templates/view.html
+++ b/templates/view.html
@@ -8,7 +8,7 @@
       <br> 
       "{{ item["message"] }} "
       <br>
-      <i>&nbsp&nbsp-- {{ item["handle"] }}</i>
+      <i>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp-- {{ item["handle"] }}</i>
       <br>
 {% endfor %}
 {% endblock %}
