--- a/templates/view.html
+++ b/templates/view.html
@@ -1,9 +1,16 @@
 <link rel="stylesheet" type="text/css" href= {{ url_for("static",filename="css/main.css") }} >
+
 {% block header %}
-  <h1>{% block title %}Some Cool Messages{% endblock %}</h1>
+  <h1>{% block title %}A Simple Message Bank{% endblock %}</h1>
+  <a href="./">Submit Your Message</a>
+  <br><br>
+  <a href="./view">View Random Messages</a>
 {% endblock %}
 
 {% block content %}
+
+<h1>Some Cool Messages Others Left:</h1>
+
 {% for key, item in messages.iterrows() %}
       <br> 
       "{{ item["message"] }} "
